Edited wiki page through web user interface.

--- a/wiki/News.wiki
+++ b/wiki/News.wiki
@@ -11,3 +11,5 @@ Here I will try to update what is done on JMugen at each evolution.
 Nightly build March, 04 2009:
   * Add Adx sound file support with loop (work correctly but need to refactor to AudioInputStream)
   * Faster PCX image building and conversion to texture. The improvement is 10 time faster.
+  * Add Game Menu
+  * Add Game Select
