Edited wiki page through web user interface.

--- a/wiki/News.wiki
+++ b/wiki/News.wiki
@@ -8,7 +8,15 @@ Here I will try to update what is done on JMugen at each evolution.
 
 = Details =
 
-Nightly build March, 04 2009:
+March, 08 2009
+  * JMugen will be not just an Fight engine, but also a user friendly editor to create Sprite and stage, for this I add live debuging.
+  * What is live debug:
+    * break point before and after a state execution
+    * change data on live
+    * live custom evaluation
+
+
+March, 04 2009:
   * Add Adx sound file support with loop (work correctly but need to refactor to AudioInputStream)
   * Faster PCX image building and conversion to texture. The improvement is 10 time faster.
   * Add Game Menu
