--- a/wiki/News.wiki
+++ b/wiki/News.wiki
@@ -9,7 +9,7 @@ Here I will try to update what is done on JMugen at each evolution.
 = Details =
 
 March, 08 2009
-  * JMugen will be not just an Fight engine, but also a user friendly editor to create Sprite and stage, for this I add live debuging.
+  * JMugen will be not just a Fight engine, but also a user friendly editor to create Sprite and stage, for this I add live debuging.
   * What is live debug:
     * break point before and after a state execution
     * change data on live
